[package]
name = "geese"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/geese"
readme = "README.md"
description = """
Dead-simple game event system for Rust.
"""

[dependencies]
bitvec = "1.0.1"
fxhash = "0.2.1"
smallvec = "1.11.0"
topological-sort = "0.2.2"

[features]
default = [ "static_check" ]
static_check = []