[package]
name = "geese"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/geese"
readme = "README.md"
description = """
Dead-simple game event system for Rust.
"""

[dependencies]
bitvec = "1.0.1"
const_list = "0.1.0"
fxhash = "0.2.1"
smallvec = "1.11.0"
topological-sort = "0.2.2"
vecdeque-stableix = "1.1.1"
wasm_sync = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"
macroquad = "0.4.2"
old_geese = { package = "geese", version = "0.2.0" }

[build-dependencies]
rustversion = "1.0.14"

[[bench]]
name = "comparative_bench"
harness = false