[package]
name = "geese"
version = "0.3.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/geese"
readme = "README.md"
description = """
Dead-simple game event system for Rust.
"""

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = [ "alloc" ] }
const_list = { version = "0.1.0", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
topological-sort = { version = "0.2.2", default-features = false }
vecdeque-stableix = { version = "1.1.1", default-features = false }
wasm_sync = { version = "0.1.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = { version = "0.2.0", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
macroquad = "0.4.2"
old_geese = { package = "geese", version = "0.2.0" }

[build-dependencies]
rustversion = "1.0.14"

[[bench]]
name = "comparative_bench"
harness = false